; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mic/host/extr_mic_boot.c___mic_dma_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mic/host/extr_mic_boot.c___mic_dma_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.scif_hw_dev = type { i32 }
%struct.mic_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i64, i8*, i32, i64)* @__mic_dma_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__mic_dma_free(%struct.device* %0, i64 %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca %struct.scif_hw_dev*, align 8
  %12 = alloca %struct.mic_device*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %13 = load %struct.device*, %struct.device** %6, align 8
  %14 = call %struct.scif_hw_dev* @dev_get_drvdata(%struct.device* %13)
  store %struct.scif_hw_dev* %14, %struct.scif_hw_dev** %11, align 8
  %15 = load %struct.scif_hw_dev*, %struct.scif_hw_dev** %11, align 8
  %16 = call %struct.mic_device* @scdev_to_mdev(%struct.scif_hw_dev* %15)
  store %struct.mic_device* %16, %struct.mic_device** %12, align 8
  %17 = load %struct.mic_device*, %struct.mic_device** %12, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @mic_unmap_single(%struct.mic_device* %17, i32 %18, i64 %19)
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @kfree(i8* %21)
  ret void
}

declare dso_local %struct.scif_hw_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.mic_device* @scdev_to_mdev(%struct.scif_hw_dev*) #1

declare dso_local i32 @mic_unmap_single(%struct.mic_device*, i32, i64) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
